unpackaged/main/default/objects/Site__c/fields/Access_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_Details__c</fullName>
    <description>Information to access the site</description>
    <label>Access Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>