unpackaged/main/default/objects/Site__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail to account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>