unpackaged/main/default/objects/Site__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>This is the Region Area that the Site relates to. This will be grouped by a region code</description>
    <label>Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>