unpackaged/main/default/objects/Site__c/fields/Cancelled_in_Flow__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_in_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a hidden Checkbox to signify that the Region Area on this record was not  recorded  as it was cancelled in the flow</description>
    <label>Cancelled in Flow</label>
    <type>Checkbox</type>
</CustomField>