unpackaged/main/default/objects/Site__c/fields/Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total__c</fullName>
    <label>Charge Total</label>
    <summarizedField>Job__c.Charge_Net__c</summarizedField>
    <summaryForeignKey>Job__c.Site__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>