unpackaged/main/default/objects/Site__c/fields/Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Total__c</fullName>
    <label>Cost Total</label>
    <summarizedField>Job__c.Cost_Total__c</summarizedField>
    <summaryForeignKey>Job__c.Site__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>