unpackaged/main/default/objects/Site__c/fields/Details_of_PPE__c.field-meta.xml
<CustomField>
    <fullName>Details_of_PPE__c</fullName>
    <label>Details of PPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>