unpackaged/main/default/objects/Site__c/fields/Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dress Code</label>
    <type>Checkbox</type>
</CustomField>