unpackaged/main/default/objects/Site__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email to contact the related Site</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>