unpackaged/main/default/objects/Site__c/fields/Exchequer_Ref__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Ref__c</fullName>
    <label>Exchequer Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>