unpackaged/main/default/objects/Site__c/fields/ID_Required__c.field-meta.xml
<CustomField>
    <fullName>ID_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is ID required to enter the venue?</description>
    <label>ID Required</label>
    <type>Checkbox</type>
</CustomField>