unpackaged/main/default/objects/Site__c/fields/Info_No_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Info_No_of_Jobs__c</fullName>
    <label>Info No. of Jobs</label>
    <summaryForeignKey>Job__c.Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>