unpackaged/main/default/objects/Site__c/fields/Info_No_of_WOs__c.field-meta.xml
<CustomField>
    <fullName>Info_No_of_WOs__c</fullName>
    <label>Info No. of WOs</label>
    <summarizedField>Job__c.Info_No_of_WOs__c</summarizedField>
    <summaryForeignKey>Job__c.Site__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>