unpackaged/main/default/objects/Site__c/fields/Opening_Times_To__c.field-meta.xml
<CustomField>
    <fullName>Opening_Times_To__c</fullName>
    <label>Opening Times To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opening_Times</valueSetName>
    </valueSet>
</CustomField>