unpackaged/main/default/objects/Site__c/fields/Parking_Available__c.field-meta.xml
<CustomField>
    <fullName>Parking_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox to indicate that you can Park on client site</description>
    <label>Parking Available</label>
    <type>Checkbox</type>
</CustomField>