unpackaged/main/default/objects/Site__c/fields/Parking_Details__c.field-meta.xml
<CustomField>
    <fullName>Parking_Details__c</fullName>
    <description>If parking is available, details on where it is and how to access etc</description>
    <label>Parking Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>