unpackaged/main/default/objects/Site__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number for the Site</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>