unpackaged/main/default/objects/Site__c/fields/PPE_Needed__c.field-meta.xml
<CustomField>
    <fullName>PPE_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPE Needed?</label>
    <type>Checkbox</type>
</CustomField>