unpackaged/main/default/objects/Site__c/fields/Primary_Site__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as the &#39;Head Office&#39; Site of this Account, or equal to</description>
    <label>Primary Site</label>
    <type>Checkbox</type>
</CustomField>