unpackaged/main/default/objects/Site__c/fields/Primary_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Primary contact at this Site</inlineHelpText>
    <label>Primary Site Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Primary_Sites_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>