unpackaged/main/default/objects/Site__c/fields/Primary_Site_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_Contact_Email__c</fullName>
    <formula>Primary_Site_Contact__r.Email</formula>
    <label>Primary Site Contact Email</label>
    <type>Text</type>
</CustomField>