unpackaged/main/default/objects/Site__c/fields/Primary_Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_Contact_Phone__c</fullName>
    <description>Primary Site Contacts phone number</description>
    <formula>Primary_Site_Contact__r.Phone</formula>
    <inlineHelpText>Primary Site Contacts phone number</inlineHelpText>
    <label>Primary Site Contact Phone</label>
    <type>Text</type>
</CustomField>