unpackaged/main/default/objects/Site__c/fields/Primary_Site_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_Contact_Role__c</fullName>
    <description>E.g. On-Site Contact - Not Bill Payer, Project Manager - Third Party etc</description>
    <inlineHelpText>E.g. On-Site Contact - Not Bill Payer, Project Manager - Third Party etc</inlineHelpText>
    <label>Primary Site Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_of_Contact</valueSetName>
    </valueSet>
</CustomField>