unpackaged/main/default/objects/Site__c/fields/Primary_Site_Contacts_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site_Contacts_Mobile__c</fullName>
    <description>Primary Site Contacts mobile phone number</description>
    <formula>Primary_Site_Contact__r.MobilePhone</formula>
    <inlineHelpText>Primary Site Contacts mobile phone number</inlineHelpText>
    <label>Primary Site Contacts Mobile</label>
    <type>Text</type>
</CustomField>