unpackaged/main/default/objects/Site__c/fields/RAMs_details__c.field-meta.xml
<CustomField>
    <fullName>RAMs_details__c</fullName>
    <label>RAMs details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>