unpackaged/main/default/objects/Site__c/fields/RAMs_Required__c.field-meta.xml
<CustomField>
    <fullName>RAMs_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAMs Required?</label>
    <type>Checkbox</type>
</CustomField>