unpackaged/main/default/objects/Site__c/fields/Region_Area__c.field-meta.xml
<CustomField>
    <fullName>Region_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Will be used to Lookup up the region code from the site postcode</description>
    <label>Region Area</label>
    <referenceTo>Region_Area__c</referenceTo>
    <relationshipLabel>Site</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>