unpackaged/main/default/objects/Site__c/fields/Region_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Area_Code__c</fullName>
    <formula>Region_Area__r.Region_Area_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Area Code</label>
    <type>Text</type>
</CustomField>