unpackaged/main/default/objects/Site__c/fields/Region_Area_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Region_Area_Placeholder__c</fullName>
    <description>This will be used to hold the text value from the Site Processes</description>
    <label>Region Area Placeholder</label>
    <length>10</length>
    <type>Text</type>
</CustomField>