unpackaged/main/default/objects/Site__c/fields/Service_Times_To__c.field-meta.xml
<CustomField>
    <fullName>Service_Times_To__c</fullName>
    <label>Service Times To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opening_Times</valueSetName>
    </valueSet>
</CustomField>