unpackaged/main/default/objects/Site__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <description>Site city address</description>
    <label>Site City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>