unpackaged/main/default/objects/Site__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <defaultValue>&#39;United Kingdom&#39;</defaultValue>
    <description>Site country</description>
    <label>Site Country</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>