unpackaged/main/default/objects/Site__c/fields/Site_Label__c.field-meta.xml
<CustomField>
    <fullName>Site_Label__c</fullName>
    <description>This will be an optional field to add any reference if need be on the Site Record</description>
    <label>Site Label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>