unpackaged/main/default/objects/Site__c/fields/Site_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Site_PostalCode__c</fullName>
    <description>Site postal address</description>
    <label>Site PostalCode</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>