unpackaged/main/default/objects/Site__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <description>Site state address</description>
    <label>Site County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>