unpackaged/main/default/objects/Site__c/fields/Site_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Sub_Type__c</fullName>
    <description>Specifies the type of Site involved</description>
    <label>Site Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Site_Sub_Type</valueSetName>
    </valueSet>
</CustomField>