unpackaged/main/default/objects/Site__c/fields/SiteGeo_Latitude__c.field-meta.xml
<CustomField>
    <fullName>SiteGeo_Latitude__c</fullName>
    <description>This field stores the latitude of the address from FLS Visitour</description>
    <label>SiteGeo Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>