unpackaged/main/default/objects/Site__c/fields/SiteGeo_Longitude__c.field-meta.xml
<CustomField>
    <fullName>SiteGeo_Longitude__c</fullName>
    <description>This field stores the longitude of the Address from FLS Visitour</description>
    <label>SiteGeo Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>