unpackaged/main/default/objects/Site__c/fields/SiteGeoloc__c.field-meta.xml
<CustomField>
    <fullName>SiteGeoloc__c</fullName>
    <label>SiteGeoloc</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>