unpackaged/main/default/objects/Site__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website of the Site e.g Website of the restaurant chain branch or the website of the diy store for suppliers</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>