unpackaged/main/default/objects/Site__c/fields/X123FB_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>X123FB_Site_Address__c</fullName>
    <formula>Site_Street__c&amp;&quot;, &quot;&amp;Site_City__c&amp;&quot;, &quot;&amp;Site_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>123FB Site Address</label>
    <type>Text</type>
</CustomField>