unpackaged/main/default/objects/Site__c/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Sites for Supplier Accounts</description>
    <label>Supplier</label>
</RecordType>