unpackaged/main/default/objects/Site__c/validationRules/Check_Site_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Site_Record_Type</fullName>
    <active>false</active>
    <errorConditionFormula>Account__r.RecordType.DeveloperName !=  RecordType.DeveloperName</errorConditionFormula>
    <errorMessage>Invalid Site Record Type. The Site record type should match the Account Record Type</errorMessage>
</ValidationRule>