unpackaged/main/default/objects/Site__c/validationRules/Parking_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Parking_Details</fullName>
    <active>false</active>
    <description>If Parking is available enter details</description>
    <errorConditionFormula>OR(
AND(
Parking_Available__c = FALSE,
NOT(ISBLANK(Parking_Details__c))
),
AND(
Parking_Available__c = TRUE,
ISBLANK(Parking_Details__c)
))</errorConditionFormula>
    <errorMessage>Please give details on the Parking Available</errorMessage>
</ValidationRule>