unpackaged/main/default/objects/Site__c/validationRules/Site_must_have_Primary_Site_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_must_have_Primary_Site_Contact</fullName>
    <active>true</active>
    <description>As requested by Matt R 11.05.20</description>
    <errorConditionFormula>AND
(
ISBLANK(Primary_Site_Contact__c),
$Profile.Id&lt;&gt; $CustomMetadata.PHASE_2_Profile_IDs__mdt.Engineer_Partner_Community.X15_Char_Profile_ID__c
)</errorConditionFormula>
    <errorDisplayField>Primary_Site_Contact__c</errorDisplayField>
    <errorMessage>A Site must always have a Primary Site Contact please.</errorMessage>
</ValidationRule>