unpackaged/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RAMs_Required__c</columns>
    <columns>RAMs_details__c</columns>
    <columns>Service_Times_From__c</columns>
    <columns>Service_Times_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Site__c.Commercial</value>
    </filters>
    <label>All</label>
</ListView>